--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,8 @@ h1{
   text-align: center;
   justify-content: center;
   font-family: "Playfair Display", serif;
-  color:rgb(255, 255, 255)
+  color:rgb(255, 255, 255);
+  font-size: 3rem;
 }
 
 h2{
@@ -76,7 +77,7 @@ nav {
 nav .button,
 nav .dropdown-button {
   font-family: "Playfair Display", serif;
-  padding: 10px 15px; /* Espaciado interno para los botones */
+  padding: 10px 25px; /* Espaciado interno para los botones */
   color: white; /* Color del texto */
   text-decoration: none; /* Sin subrayado */
   border: none; /* Sin borde */
@@ -123,15 +124,35 @@ nav .dropdown-button:hover {
 }
 
 /* Estilos responsivos */
-@media (max-width: 60px) {
+@media (max-width: 768px) {
   nav {
       flex-direction: column; /* Cambiar a columna en pantallas pequeñas */
       align-items: stretch; /* Alinear elementos para que ocupen todo el ancho */
+      
   }
-  nav .button,
-  nav .dropdown-button {
-      text-align: right; /* Centrar el texto en los botones */
+  h1 {
+    font-size: 25px;
+  }
+
+  html,body{
+    background-size: 250% 250%;
+  }
+
+  main{
+    font-size: 15px;
+  }
+
+nav .dr{
+  color: blue;
+}
+  
+
+  nav .button,nav .dropdown-button:hover
+  nav .dropdown-button, nav.dropdown-item:hover {
+      text-align: center; /* Centrar el texto en los botones */
       margin-bottom: 10px; /* Espaciado entre botones */
+      font-size: 15px;
+      
   }
 }
 
