--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,9 @@ h1{
   font-family: 'Times New Roman', Times, serif;
 }
 
-h2{
-  
+h2,h3{
   font-size: 2rem;
+  margin: 0;
 }
 
 
@@ -147,9 +147,10 @@ nav .dropdown-button:hover {
     font-size: 25px;
     font-family: 'Times New Roman', Times, serif;
   }
-  h2{
-    font-size: 20px;
+  h2,h3{
+    font-size: 22px;
     font-family: 'Times New Roman', Times, serif;
+    margin: 0;
   }
 
   html,body{
@@ -158,8 +159,8 @@ nav .dropdown-button:hover {
   }
 
   main{
-    font-size: 13px;
     text-align: left; /* Centrar el texto en los botones */
+    font-size: 1.2vmax;
   }
 
   nav .dropdown-item{
@@ -193,6 +194,7 @@ main {
   background-color:rgba(255, 255, 255, 0.85);  /* Fondo blanco para el contenido principal */
   text-align: left; 
   font-family: Georgia, 'Times New Roman', Times, serif;
+  line-height: 1.5;
 }
 
 
@@ -230,3 +232,17 @@ footer {
 
 .ne{  font-weight: bold;}
 
+.video-section{
+  position: relative;
+    padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-section iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
